@@ -1,6 +1,6 @@
 [ ABOUT ]
 
-tintwizard 0.21 (27th August 2009)
+tintwizard 0.22 (28th August 2009)
 
 Thank you for downloading tintwizard!
 
